--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -1,3 +1,7 @@
+.dropdown {
+  width: fit-content;
+}
+
 .dropdown__btn {
   width: fit-content;
   padding: 10px 16px;
@@ -13,13 +17,13 @@
 
 .dropdown__content {
   display: none;
+  padding: 0;
   margin: 0;
 }
 
 .dropdown:hover .dropdown__content {
   display: block;
   width: fit-content;
-  padding: 0;
   background-color: aqua;
   list-style: none;
 }
