--- a/rush/components/navbar.html
+++ b/rush/components/navbar.html
@@ -5,7 +5,7 @@
   data-bs-target="#offcanvasExample"
   aria-controls="offcanvasExample"
 >
-  <img src="assets/images/hamburger.png" alt="" width="25px" />
+  <i class="fa-solid fa-bars"></i>
 </button>
 
 <div
@@ -25,13 +25,38 @@
   </div>
   <div class="offcanvas-body">
     <div>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
+      <ul class="mobile__nav__list">
+        <li class="mobile__nav__item">Home</li>
+        <li class="mobile__nav__item">About</li>
+        <li class="mobile__nav__item">Contact</li>
       </ul>
       <!-- Put navbar body Here -->
     </div>
   </div>
 </div>
-<!-- End Mobile Nabbar -->
+<!------- End Mobile Nabbar -------->
+
+<!------- Navbar -------->
+<nav class="d-none d-lg-flex flex-column justify-content-center">
+  <ul>
+    <li class="nav__item">
+      <a href="#home">
+        <i class="fa-regular fa-house"></i>
+        <span>Home</span>
+      </a>
+    </li>
+    <li class="nav__item">
+      <a href="#about">
+        <i class="fa-solid fa-user"></i>
+        <span>About</span>
+      </a>
+    </li>
+    <li class="nav__item">
+      <a href="#contact">
+        <i class="fa-regular fa-envelope"></i>
+        <span>Contact</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+<!------- End Navbar -------->
