--- a/rush/assets/styles/index.css
+++ b/rush/assets/styles/index.css
@@ -1,6 +1,12 @@
 :root {
   --color-primary: #2584ff;
   --color-border: #eee;
+  --color-disabled: rgba(0, 0, 0, 0.38);
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 ul {
@@ -15,9 +21,7 @@ a {
 
 .page {
   width: 100vw;
-  height: 100vh;
-  /* background-color: #2584ff; */
-  padding-left: 10rem;
+  min-height: 100vh;
 }
 
 /* Navbar */
@@ -48,6 +52,7 @@ a {
 
 nav {
   position: fixed;
+  z-index: 1000;
   height: 100vh;
   padding: 0 1rem;
 }
@@ -102,13 +107,182 @@ nav {
 /* Home */
 
 #home {
-  background-image: url('../images/human-2.jpeg');
+  background-image: url('../images/human-4.jpg');
+  background-size: cover;
+  background-position: 77%;
+
+  display: flex;
+  align-items: center;
+}
+
+#home::before {
+  content: '';
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.home__content {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home__content h1 {
+  color: black;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.5rem;
+}
+
+@media screen and (min-width: 762px) {
+  #home {
+    background-position: top;
+    padding-left: 16rem;
+  }
+
+  .home__content {
+    width: fit-content;
+  }
+
+  .home__content h1 {
+    font-size: 4rem;
+  }
+
+  .home__content p {
+    font-size: 1.5rem;
+  }
+}
+
+/* About */
+/* About */
+#about {
+  padding: 1rem;
+}
+
+.header h2 {
+  font-weight: 600;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+
+  position: relative;
+}
+
+.header h2::after {
+  content: ' ';
+  display: block;
+  width: 40px;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  transform: translateX(-50%);
+}
+
+.header p {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+.about__img {
+  width: 100%;
+  height: 400px;
+  background-image: url('../images/human-5.webp');
   background-size: cover;
   background-position: center;
 }
 
-/* About */
-
-#about {
-  background-color: aqua;
+.infomation__detail {
+  padding: 2rem 0;
 }
+
+.infomation__detail h3 {
+  text-align: center;
+  margin-bottom: 1.4rem;
+}
+
+.info {
+  padding: 0.6rem 0.8rem;
+  border: 1px solid var(--color-disabled);
+  border-radius: 5px;
+  color: var(--color-disabled);
+  margin-bottom: 1rem;
+
+  position: relative;
+}
+
+.info span {
+  position: absolute;
+  top: -10px;
+  background-color: white;
+  padding: 0 5px;
+  color: #999;
+  font-size: 0.8rem;
+}
+
+.info p {
+  margin: 0;
+}
+
+.info:hover {
+  border-color: var(--color-primary);
+}
+
+.info:hover span,
+.info:hover p {
+  color: var(--color-primary);
+}
+
+@media screen and (min-width: 762px) {
+  .about__information {
+    display: flex;
+    margin-top: 3rem;
+  }
+
+  .infomation__detail {
+    flex-grow: 1;
+    padding: 0 2rem;
+  }
+
+  .about__img {
+    width: 400px;
+    height: 380px;
+  }
+
+  .infomation__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 1rem;
+  }
+}
+
+/* Skill */
+
+.progress__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 762px) {
+  .progress__container {
+    display: grid !important;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .progress__bar {
+    margin-bottom: 1rem;
+  }
+}
+
+/* Contact */
