--- a/rush/assets/styles/index.css
+++ b/rush/assets/styles/index.css
@@ -24,6 +24,33 @@ a {
   min-height: 100vh;
 }
 
+.header h2 {
+  font-weight: 600;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+
+  position: relative;
+}
+
+.header h2::after {
+  content: ' ';
+  display: block;
+  width: 40px;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  transform: translateX(-50%);
+}
+
+.header p {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
 /* Navbar */
 
 .hamburger {
@@ -38,6 +65,7 @@ a {
 }
 
 .mobile__nav__item {
+  display: block;
   background-color: var(--color-border);
   border-radius: 100px;
   padding: 15px 20px;
@@ -93,14 +121,16 @@ nav {
 
 .nav__item:hover {
   width: 100%;
-  background-color: orange;
+  background-color: var(--color-primary);
 }
 
 .nav__item:hover i {
-  background-color: orange;
+  background-color: var(--color-primary);
+  color: white;
 }
 
 .nav__item:hover span {
+  color: white;
   display: inline-block;
 }
 
@@ -160,37 +190,11 @@ nav {
 }
 
 /* About */
-/* About */
-#about {
-  padding: 1rem;
-}
 
-.header h2 {
-  font-weight: 600;
-  text-align: center;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  font-size: 2rem;
-
-  position: relative;
-}
-
-.header h2::after {
-  content: ' ';
-  display: block;
-  width: 40px;
-  height: 2px;
-  background-color: black;
-  position: absolute;
-  left: 50%;
-  bottom: -10px;
-  transform: translateX(-50%);
-}
-
-.header p {
-  text-align: center;
-  font-size: 0.8rem;
-}
+/* #about {
+  padding-top: 5rem;
+  padding-bottom: 10rem;
+} */
 
 .about__img {
   width: 100%;
@@ -198,6 +202,7 @@ nav {
   background-image: url('../images/human-5.webp');
   background-size: cover;
   background-position: center;
+  overflow: hidden;
 }
 
 .infomation__detail {
@@ -206,6 +211,7 @@ nav {
 
 .infomation__detail h3 {
   text-align: center;
+  margin-top: 0.5rem;
   margin-bottom: 1.4rem;
 }
 
@@ -215,6 +221,7 @@ nav {
   border-radius: 5px;
   color: var(--color-disabled);
   margin-bottom: 1rem;
+  transition: 0.3s;
 
   position: relative;
 }
@@ -241,7 +248,16 @@ nav {
   color: var(--color-primary);
 }
 
+.info:hover {
+  transform: scale(1.05);
+}
+
 @media screen and (min-width: 762px) {
+  #about {
+    padding-top: 5rem;
+    padding-bottom: 10rem;
+  }
+
   .about__information {
     display: flex;
     margin-top: 3rem;
@@ -254,18 +270,15 @@ nav {
 
   .about__img {
     width: 400px;
-    height: 380px;
-  }
-
-  .infomation__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 1rem;
+    height: 475px;
   }
 }
 
 /* Skill */
+
+/* .skill {
+  padding-top: 5rem;
+} */
 
 .progress__container {
   display: flex;
@@ -274,6 +287,10 @@ nav {
 }
 
 @media screen and (min-width: 762px) {
+  .skill {
+    padding-top: 5rem;
+  }
+
   .progress__container {
     display: grid !important;
     grid-template-rows: repeat(3, 1fr);
@@ -286,3 +303,111 @@ nav {
 }
 
 /* Contact */
+#contact {
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+}
+
+.contact__info {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.contact__info i {
+  color: var(--color-primary);
+  font-size: 24px;
+  padding-top: 12px;
+  padding-left: 15px;
+  width: 28px;
+}
+
+.contact__info .fa-envelope {
+  padding-left: 12px;
+}
+
+.contact__detail {
+  flex-grow: 1;
+}
+
+.contact__detail h6 {
+  margin-top: 2px 0;
+}
+
+.contact__detail p {
+  font-size: 0.8rem;
+}
+
+@media screen and (min-width: 762px) {
+  #contact {
+    padding-bottom: 10rem;
+  }
+
+  .contact__container {
+    padding: 2rem 0;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .contact__info {
+    gap: 4rem;
+  }
+
+  .contact__info i {
+    font-size: 4rem;
+  }
+
+  .contact__info .fa-envelope {
+    padding-right: 20px;
+  }
+
+  .contact__detail {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 0.8rem;
+  }
+
+  .contact__detail h6 {
+    font-size: 1.5rem;
+  }
+
+  .contact__detail p {
+    font-size: 1rem;
+  }
+}
+
+/* Footer */
+
+footer {
+  background-color: var(--color-border);
+}
+
+.footer__header h2 {
+  text-align: center;
+}
+
+.footer__header p {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+.social__list {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.social__item a {
+  font-size: 2rem;
+}
+
+.social__item:hover a {
+  color: var(--color-primary) !important;
+}
+
+.copyright {
+  font-size: 0.8rem;
+  text-align: center;
+}
