--- a/rush/assets/styles/index.css
+++ b/rush/assets/styles/index.css
@@ -57,6 +57,112 @@ a {
   cursor: pointer;
 }
 
+/* First page */
+
+.body__image {
+  background-image: url('../images/bg.jpg');
+  background-repeat: none;
+  background-size: cover;
+  background-position: right;
+  backdrop-filter: brightness(40%);
+}
+
+.navigation__page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  gap: 2rem;
+}
+
+.navigation__page h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  color: white;
+}
+
+.navigation__profile {
+  position: relative;
+  width: 33vh;
+  height: 33vh;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.navigation__content img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.napat__img {
+  object-position: top;
+}
+
+.navigation__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.navigation__name {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  opacity: 0;
+  z-index: 1;
+  color: white;
+  transition: all 0.3s ease-in-out;
+}
+
+.navigation__profile:hover::after {
+  content: ' ';
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.navigation__profile:hover .navigation__name {
+  opacity: 1;
+}
+
+@media screen and (min-width: 992px) {
+  .navigation__page {
+    gap: 4rem;
+  }
+
+  .navigation__page h1 {
+    font-size: 4rem;
+  }
+
+  .navigation__content {
+    flex-direction: row;
+    justify-content: center;
+    gap: 8rem;
+  }
+
+  .navigation__content img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .navigation__profile {
+    width: 400px;
+    height: 400px;
+  }
+}
+
 /* Navbar */
 
 .hamburger {
