--- a/rush/assets/styles/cmeesuan.css
+++ b/rush/assets/styles/cmeesuan.css
@@ -316,6 +316,11 @@ nav {
   padding-bottom: 10rem;
 } */
 
+#about {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .about__img {
   width: 100%;
   height: 400px;
